# rsprof

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/rsprof/: Cargo.toml  build.rs
crates/rsprof-trace/: Cargo.toml
crates/rsprof-trace/src/: lib.rs  profiling.rs
crates/rsprof/examples/: cpu_test.rs  target_app.rs
crates/rsprof/examples/target_app/: analytics.rs  app.rs  audit.rs  audit_log.rs  checkout.rs  main.rs  metrics.rs  model.rs  processing.rs  search.rs  utils.rs
crates/rsprof/examples/test_app/: app.rs  audit_log.rs  cache.rs  metrics.rs  utils.rs  validation.rs
crates/rsprof/src/: cli.rs  error.rs  lib.rs  main.rs
crates/rsprof/src/commands/: list.rs  query.rs  top.rs
crates/rsprof/src/cpu/: mod.rs  perf.rs
crates/rsprof/src/heap/: mod.rs  sampler.rs  shm_sampler.rs  stub.rs
crates/rsprof/src/heap/bpf/: heap.bpf.c  vmlinux.h
crates/rsprof/src/process/: attach.rs  maps.rs  mod.rs
crates/rsprof/src/storage/: mod.rs  schema.rs  writer.rs
crates/rsprof/src/symbols/: dwarf.rs  mod.rs  resolver.rs
crates/rsprof/src/tui/: app.rs  mod.rs  ui.rs
docs/rfc/: 00-abstract.md  01-introduction.md  02-terminology.md  03-architecture.md  04-symbol-resolution.md  05-cpu-profiling.md  06-heap-profiling.md  07-storage.md  08-cli.md  09-user-interface.md  10-security.md  11-references.md  README.md
example/: .gitignore  Cargo.toml  README.md
example/src/: app.rs  buffer_pool.rs  cache.rs  cpu_patterns.rs  main.rs  validation.rs
examples/: target_app.rs
src/: error.rs  lib.rs  main.rs
src/commands/: mod.rs  query.rs  top.rs  view.rs
src/cpu/: sampler.rs
src/heap/: sampler.rs
src/process/: attach.rs  mod.rs
src/storage/: mod.rs  schema.rs  writer.rs
src/symbols/: dwarf.rs  mod.rs  resolver.rs
src/tui/: app.rs  mod.rs  ui.rs
