[workspace]
resolver = "2"
members = [
    "crates/rsprof",
    "crates/rsprof-trace",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"

[profile.release]
debug = true
# NOTE: To enable frame pointers (required for heap profiling stack traces),
# build with: RUSTFLAGS="-C force-frame-pointers=yes" cargo build --release
lto = "thin"
codegen-units = 16
