[package]
name = "rsprof"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-instrumentation profiler for Rust processes"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ctrlc = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# DWARF/ELF parsing
gimli = "0.31"
object = { version = "0.36", default-features = false, features = ["read", "std"] }
memmap2 = "0.9"
rustc-demangle = "0.1"

# System interfaces
nix = { version = "0.29", features = ["process", "mman", "fs"] }
libc = "0.2"

# eBPF (for heap profiling) - optional
libbpf-rs = { version = "0.24", optional = true }
plain = { version = "0.2", optional = true }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Time and formatting
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
humantime = "2"
comfy-table = "7"
rsprof-trace = { path = "../rsprof-trace", optional = true, features = ["profiling"] }

[build-dependencies]
libbpf-cargo = { version = "0.24", optional = true }

[features]
default = ["heap"]
heap = ["libbpf-rs", "plain", "libbpf-cargo"]
self-profile = ["rsprof-trace"]

[dev-dependencies]
rsprof-trace = { path = "../rsprof-trace", features = ["profiling"] }
